--- a/services/glance/docker-compose.yml
+++ b/services/glance/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     container_name: glance
     restart: unless-stopped
     networks:
-      - self_hosted
+      - athena
     ports:
       - 10002:8080
     volumes:
