--- a/services/authelia/docker-compose.yml
+++ b/services/authelia/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     restart: unless-stopped
     networks:
       - athena
-    ports:
-      - 10000:9091
+    # ports:
+    #   - 9091:9091
     volumes:
       - ./config:/config
 
