--- a/services/open-webui/docker-compose.yml
+++ b/services/open-webui/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     restart: unless-stopped
     networks:
       - athena
-    ports:
-      - 10003:8080
+    # ports:
+    #   - 8080:8080
     volumes:
       - open-webui_data:/app/backend/data
     environment:
