--- a/services/portainer/docker-compose.yml
+++ b/services/portainer/docker-compose.yml
@@ -5,9 +5,8 @@ services:
     restart: unless-stopped
     networks:
       - athena
-    ports:
-      - 10001:8000
-      - 9443:9443
+    # ports:
+    #   - 9443:9443
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - portainer_data:/data
