Improved authelia setup

--- a/authelia/config/users.example.yml
+++ b/authelia/config/users.example.yml
@@ -1,6 +1,6 @@
 users:
-  abhithube:
+  user1:
     disabled: false
-    email: athube@abhithube.com
+    email: user1@example.com
     password: $argon2id$v=19$m=65536,t=3,p=4$6iMA+cbGY5hVHtKd9Zh5DQ$Z5eZdJrnybTnVEytkOTStOeDNooRgZfmXicjTQkTbOo
-    displayname: Abhi Thube
+    displayname: User 1
