--- a/caddy/conf/Caddyfile
+++ b/caddy/conf/Caddyfile
@@ -80,3 +80,7 @@ dashboard.abhithube.com {
 status.abhithube.com {
 	reverse_proxy beszel:8090
 }
+
+vault.abhithube.com {
+	reverse_proxy vaultwarden:80
+}
