--- a/beszel/docker-compose.yml
+++ b/beszel/docker-compose.yml
@@ -6,8 +6,8 @@ services:
     networks:
       - athena
     volumes:
-      - ./data:/beszel_data
-      - ./socket:/beszel_socket
+      - /opt/athena/beszel/data:/beszel_data
+      - /opt/athena/beszel/socket:/beszel_socket
     environment:
       USER_CREATION: true
       DISABLE_PASSWORD_AUTH: true
@@ -18,8 +18,8 @@ services:
     restart: unless-stopped
     network_mode: host
     volumes:
-      - ./agent:/var/lib/beszel-agent
-      - ./socket:/beszel_socket
+      - /opt/athena/beszel/agent:/var/lib/beszel-agent
+      - /opt/athena/beszel/socket:/beszel_socket
       - /var/run/docker.sock:/var/run/docker.sock:ro
     env_file:
       - .env
